src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>State_or_Province__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>State or Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stoplight_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Stoplight Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1455 - Field value dependent on selected Industry</description>
        <label>Sub Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CustomerSegment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Alliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PEP-ACN-Lead registration notification</description>
        <label>TECH_Alliance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PEP-ACN-Field created to represent &quot;Lead Source Org field&quot; and used to as a field to populate the Partner Account</description>
        <label>Lead Source Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>FirstName &amp; LastName &amp; Email &amp; Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Therapy_Area__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Therapy Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Therapy_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TwitterID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>TwitterID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>PRM_Lead</fullName>
        <active>true</active>
        <businessProcess>PRM_Lead_Process</businessProcess>
        <description>PEP-ACN-63 Lead Recordtype</description>
        <label>Partner Referrals</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LED_VR01_PEP_LeadUpdate</fullName>
        <active>true</active>
        <description>PRM-67 partner user are not allowed to update lead that are converted or rejected</description>
        <errorConditionFormula>$Profile.Name = &apos;PRM Community User&apos; &amp;&amp;
(NOT ISNEW() &amp;&amp; (ISPICKVAL(Status,&apos;Closed - No Opportunity&apos;) || ISPICKVAL(Status,&apos;Converted&apos;) || 
  TEXT(PRIORVALUE(Status)) = &apos;Closed - No Opportunity&apos; || TEXT(PRIORVALUE(Status)) = &apos;Converted&apos;  ))</errorConditionFormula>
        <errorMessage>You are not authorized to edit this lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR02_PEP_Lead_status_default</fullName>
        <active>true</active>
        <description>Validation rule so as to prevent partner user to change lead changes on new/change</description>
        <errorConditionFormula>$Profile.Name = &apos;PRM Community User&apos; &amp;&amp;
(ISCHANGED(Status))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Lead Status cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR03_PEP_Lead_Rejection</fullName>
        <active>true</active>
        <description>PRM_ACN_PRM-70-Lead Rejection</description>
        <errorConditionFormula>AND( NOT($Profile.Name = &apos;PRM Community User&apos;),$RecordType.Name = &quot;Partner Referrals&quot;, ISPICKVAL( Status , &apos;Closed - No Opportunity&apos;),ISPICKVAL(LeadSource, &apos;Partner referral&apos;),  OR(  ISBLANK(  TEXT(Reason_Code__c ) ) , ISBLANK( Comment__c )  )  )</errorConditionFormula>
        <errorDisplayField>Reason_Code__c</errorDisplayField>
        <errorMessage>Reason Code and Comment should be added on Lead Rejection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR04_PEP_Lead_Source_Default_Value</fullName>
        <active>true</active>
        <description>PEP-ACN-PRM-63-Lead Source Default Value</description>
        <errorConditionFormula>AND( $Profile.Name = &apos;PRM Community User&apos;, OR((AND(ISCHANGED(LeadSource) , NOT(ISPICKVAL(LeadSource, &apos;Partner referral&apos;)))) ,  AND(ISNEW(), NOT(ISPICKVAL(LeadSource, &apos;Partner referral&apos;)))))</errorConditionFormula>
        <errorDisplayField>LeadSource</errorDisplayField>
        <errorMessage>Lead Sources must be &quot;Partner referral&quot; on a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR05_PEP_Other_Product_Mandatory</fullName>
        <active>true</active>
        <description>PEP-ACN-PRM-63-Other Product Mandatory</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;PRM_Lead&apos; , ISPICKVAL( Product__c , &apos;Other Product&apos;), ISBLANK( Other_Product__c )   )</errorConditionFormula>
        <errorDisplayField>Other_Product__c</errorDisplayField>
        <errorMessage>Please specify the value for  &quot;Other Product &quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR06_PEP_First_Name_Mandatory</fullName>
        <active>true</active>
        <description>First Name is mandatory.</description>
        <errorConditionFormula>$Profile.Name = &apos;PRM Community User&apos; &amp;&amp; ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR07_PEP_Lead_Status_OnCreation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),$RecordType.Name = &quot;Partner Referrals&quot;, NOT(ISPICKVAL(Status, &apos;Not Started&apos;)))</errorConditionFormula>
        <errorMessage>Lead Status should be &apos;Not Started&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR08_CRM_Lead_First_Name_Mandatory</fullName>
        <active>true</active>
        <description>CRM-MC-ESPSFDCQI-6012 - First Name is mandatory</description>
        <errorConditionFormula>!$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c &amp;&amp; ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR09_CRM_Lead_Country_Mandatory</fullName>
        <active>true</active>
        <description>CRM-MC-ESPSFDCQI-6012 - Country is mandatory</description>
        <errorConditionFormula>!$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c &amp;&amp; ISBLANK(Country) &amp;&amp; $RecordType.DeveloperName != &quot;PRM_Lead&quot;</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Country is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LED_VR10_CRM_Restrict_LeadSource_Detail</fullName>
        <active>true</active>
        <description>ESPSFDCQI-12653</description>
        <errorConditionFormula>(
 NOT ISNEW() &amp;&amp;
 ($Profile.Name &lt;&gt; &apos;Marketing Integration User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;IQVIA Salesforce Platform Support&apos;) &amp;&amp;
 NOT(CONTAINS($Profile.Name, &apos;System Administrator&apos;)) &amp;&amp; 
 (ISCHANGED(LeadSource) || ISCHANGED( Lead_Source_Original_Detail__c)) 
)</errorConditionFormula>
        <errorMessage>This fields (Lead Source and Lead Source Detail) can only be edited on lead creation, to request an update please email marketing.automation@iqvia.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>